# dbt2looker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  master.yml
.lh/dbt2looker/dbt_json_schemas/: manifest_dbt2looker.json.json
dbt2looker/: cli.py  generator.py  models.py  parser.py
dbt2looker/dbt_json_schemas/: manifest_dbt2looker.json  manifest_v1.json  manifest_v4.json
example/: README.md  dbt_project.yml
example/lookml/: hubble_analytics.model  pages.model.lkml
example/lookml/views/: events.view  pages.view  pages.view.lkml
example/models/: sources.yml
example/models/prod/: pages.sql  pages.yml
tests/resources/: dbt_project.yml
tests/resources/expected_lookml/: email__daily_total_email_campaigns.model.lkml  email__daily_total_emails_by_source_name.model.lkml  email__email_events_by_source_and_isp.model.lkml  email__email_events_by_source_and_pool.model.lkml  email__email_events_by_source_pool_isp_eng.model.lkml  email__email_failed_rejected_reasons.model.lkml  infra__aws_cost_overview.model.lkml  infra__contract_estimations.model.lkml  infra__contract_info.model.lkml  infra__contract_status.model.lkml  infra__cost_budget.model.lkml  infra__cost_budget_history.model.lkml  infra__databricks_costs.model.lkml  infra__ec2_cost.model.lkml  infra__elasticcache_cost.model.lkml  infra__elasticsearch_cost.model.lkml  infra__github_workflow_runs.model.lkml  infra__groups_and_teams.model.lkml  infra__infra_metrics_model.model.lkml  infra__kubernetes_cost.model.lkml  infra__msk_cost.model.lkml  infra__opensearch_cost.model.lkml  infra__opsgenie_alerts.model.lkml  infra__opsgenie_incidents.model.lkml  infra__rds_cost.model.lkml  infra__rivery_contract_statistics.model.lkml  infra__rivery_usage_model.model.lkml  infra__s3_cost.model.lkml  infra__s3_prefix_aggregations.model.lkml  infra__s3_storage_data_summary.model.lkml  infra__snowflake_automatic_clustering_cost.model.lkml  infra__snowflake_cost_summary.model.lkml  infra__snowflake_daily_cost.model.lkml  (+17 more)
tests/yoda_dbt2looker/: test_cli.py  test_generator.py  test_parser.py
yoda_dbt2looker/: cli.py  generator.py  models.py  parser.py
yoda_dbt2looker/dbt_json_schemas/: manifest_dbt2looker.json  manifest_v2.json  manifest_v6.json  manifest_v9.json
(+10 files in other folders)
