[tool.poetry]
name = "yoda-dbt2looker"
version = "0.9.9"
description = "Generate lookml view files from dbt models"
authors = ["oliverlaslett <oliver@gethubble.io>", "chaimturkel <cyturel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/YotpoLtd/yoda-dbt2looker"
repository = "https://github.com/YotpoLtd/yoda-dbt2looker"

[tool.poetry.dependencies]
python = ">=3.7"
lkml = "^1.1.0"
pydantic = "^1.8.1"
PyYAML = "^5.4.1"
jsonschema = "^3.2.0"
typing-extensions = "^3.10.0"
importlib-metadata = "^4.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yoda_dbt2looker = 'yoda_dbt2looker.cli:run'
