[tool.poetry]
name = "yoda-dbt2looker"
version = "0.9.28"
description = "Generate lookml view files from dbt models"
authors = ["oliverlaslett <oliver@gethubble.io>", "chaimturkel <cyturel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/YotpoLtd/yoda-dbt2looker"
repository = "https://github.com/YotpoLtd/yoda-dbt2looker"

[tool.poetry.dependencies]
python = ">=3.7"
lkml = "^1.2.0"
pydantic = "^1.10.1"
PyYAML = "^6.0"
jsonschema = "^4.15.0"
typing-extensions = "^4.3.0"
importlib-metadata = "^4.12.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yoda_dbt2looker = 'yoda_dbt2looker.cli:run'
